--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 InfiHack App coming soon
 </h1>
 <p>The app will include alot of things making hacking alot more easier</p>
-<p>Find me on Discord as <mark>InfiHack#5261</mark></p>
+<p>Find me on Discord as <mark>InfiHacker#5261</mark></p>
 
 
 <a href = "https://discord.gg/cyMjPFnBW9">InfiHack App Discord Server</a>
